<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lfz_pc.myapplication.ReserveActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/reserveDate" />

        <TextView
            android:id="@+id/reserveDate"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text=""
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/reserveStartTime" />

        <TextView
            android:id="@+id/reserveStartTime"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text=""
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/reserveEndTime" />

        <TextView
            android:id="@+id/reserveEndTime"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text=""
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:text="@string/instrument" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:spinnerMode="dialog"
            android:entries="@array/instruments"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/setAutoReserveTime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/autoReserveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:clickable="true"
                android:text="" />

            <TextView
                android:id="@+id/autoReserveTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:clickable="true"
                android:text="" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/autoReserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/autoReserve" />

</LinearLayout>
